Updating the information of vertices and edges

--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
     <div class="intro">
       <h1 class="title">Graph Builder</h1>
       <p class="instructions">
-        Thank you for visiting my graph builder, using D3's force layout.
-        (1) Click within the border to add a node. (2) Try dragging a node around the graph.
-        (3) Select a node by clicking it. (4) What happens when you hit the delete key?
-        (5) Select two nodes to add an edge between them.
+        <br>Thank you for visiting my graph builder, using D3's force layout.</br>
+        <br>(1) Click within the border to add a node.</br>
+        <br>(2) Try dragging a node around the graph.</br>
+        <br>(3) Select a node by clicking it.</br>
+        <br>(4) What happens when you hit the delete key?</br>
+        <br>(5) Select two nodes to add an edge between them.</br>
       </p>
       
-      <!--
-      <ul>
-        <li><a href="https://github.com/smgoy" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/sam-gyory-43572766" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
-      </ul>
-      -->
     </div>
 
+    <div id="graph-info">
+      <p id="info-vertices"></p>
+      <p id="info-edges"></p>
+      <ul id="info-degrees"></ul>
+    </div>
   </body>
 
   <script src="https://d3js.org/d3.v3.min.js"></script>
