--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Graph Builder</title>
-    <link rel="shortcut icon" type="image/x-icon" href="http://s10.postimg.org/j46yhe12x/icon.png" />
-    <link rel="stylesheet" href="./css/app.css"></link>
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Force-Directed Graph</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-  <body>
-    <div class="intro">
-      <h1 class="title">Graph Builder</h1>
-      <p class="instructions">
-        <br>Thank you for visiting my graph builder, using D3's force layout.</br>
-        <br>(1) Click within the border to add a node.</br>
-        <br>(2) Try dragging a node around the graph.</br>
-        <br>(3) Select a node by clicking it.</br>
-        <br>(4) What happens when you hit the delete key?</br>
-        <br>(5) Select two nodes to add an edge between them.</br>
-      </p>
-      
-    </div>
+<div class="container">
+  <h1>Force-Directed Graph</h1>
+  <p>Click anywhere on the canvas to add a node. Select a node by clicking on it, and press the Backspace key to delete the selected node. Drag nodes to reposition them.</p>
 
-    <div id="graph-info">
-      <p id="info-vertices"></p>
-      <p id="info-edges"></p>
-      <ul id="info-degrees"></ul>
-    </div>
-  </body>
+  <svg class="canvas"></svg>
 
-  <script src="https://d3js.org/d3.v3.min.js"></script>
-  <script src='./js/app.js'></script>
+  <div class="graph-info" id="graph-info">
+    <ul>
+      <li id="info-vertices">Vertices: 0</li>
+      <li id="info-edges">Edges: 0</li>
+    </ul>
+    <ul id="info-degrees">
+      <!-- Degrees of vertices will be dynamically added here -->
+    </ul>
+  </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+<script src="script.js"></script>
+</body>
 </html>
