--- a/index.html
+++ b/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Force-Directed Graph</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title>Graph Builder</title>
+  <link rel="shortcut icon" type="image/x-icon" href="http://s10.postimg.org/j46yhe12x/icon.png" />
+  <link rel="stylesheet" href="./css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
+
 <body>
-
-<div class="container">
-  <h1>Force-Directed Graph</h1>
-  <p>Click anywhere on the canvas to add a node. Select a node by clicking on it, and press the Backspace key to delete the selected node. Drag nodes to reposition them.</p>
-
-  <svg class="canvas"></svg>
-
-  <div class="graph-info" id="graph-info">
-    <ul>
-      <li id="info-vertices">Vertices: 0</li>
-      <li id="info-edges">Edges: 0</li>
-    </ul>
-    <ul id="info-degrees">
-      <!-- Degrees of vertices will be dynamically added here -->
-    </ul>
+  <div class="intro">
+    <h1 class="title">Graph Builder</h1>
+    <p class="instructions">
+      Thank you for visiting my graph builder, using D3's force layout.
+      <br>(1) Click within the border to add a node.
+      <br>(2) Try dragging a node around the graph.
+      <br>(3) Select a node by clicking it.
+      <br>(4) What happens when you hit the delete key?
+      <br>(5) Select two nodes to add an edge between them.
+    </p>
   </div>
-</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
-<script src="script.js"></script>
+  <div id="graph-info">
+    <p id="info-vertices">Vertices: 0</p>
+    <p id="info-edges">Edges: 0</p>
+    <p id="info-degrees">Degrees: </p>
+  </div>
+
+  <!-- The SVG element or container for the graph will be created by D3.js in the app.js file -->
+  <!-- Typically, it would be something like <svg></svg> or <div id="graph"></div> -->
+
+  <script src="https://d3js.org/d3.v3.min.js"></script>
+  <script src='./js/app.js'></script>
 </body>
 </html>
