update color bar for the vertices

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <p id="info-degrees">Degrees: </p>
   </div>
 
+  <div>
+    <p>Color Bar</p>
+  </div>
+
   <!-- The SVG element or container for the graph will be created by D3.js in the app.js file -->
   <!-- Typically, it would be something like <svg></svg> or <div id="graph"></div> -->
 
