Setting color of node by white in default

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <p id="info-degrees">Degrees: </p>
   </div>
 
+  <div id="Add a loop button">
+    <button id="create-loop-button">Create Loop</button>
+  </div>
+
   <div>
     <p>Color Bar</p>
   </div>
