add a single loop

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <p id="info-degrees">Degrees: </p>
   </div>
 
-  <div id="Add a loop button">
-    <button id="create-loop-button">Create Loop</button>
+  <div id="Add a single loop button">
+    <button id="create-loop-button">Create a single Loop</button>
   </div>
 
   <div>
