--- a/index.html
+++ b/index.html
@@ -28,11 +28,6 @@
     <p id="info-degrees">Degrees: </p>
   </div>
 
-  <!--
-  <div id="loop-info">
-    <h3>Loops</h3>
-    <ul id="loop-list"></ul>
-  </div>-->
 
   <div id="Add a single loop button">
     <button id="create-loop-button">Create a single Loop</button>
@@ -42,6 +37,8 @@
     <input type="text" id="vertex-count-input" placeholder="Enter number of vertices (3-10)"/>
     <button id="create-custom-loop-button">Create Custom Loop</button>
   </div>
+
+  <button id="addParallelEdgeButton">Add Parallel Edge</button>
 
   <div>
     <p>Color Bar</p>
