reorganize event listener

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <button id="addParallelEdgeButton">Add Parallel Edge</button>
 
   <div>
-    <p>Color Bar</p>
+    <p>Color Bar:</p>
   </div>
 
   <script src="https://d3js.org/d3.v3.min.js"></script>
